# app-ctrl

./: LICENSE  README.md
api/: .gitignore  .goreleaser.yml  Makefile  README.md  app-control-api.go  go.mod  go.sum  nfpm.yaml
api/api/: api.go  api_test.go  auth.go  auth_test.go  deploy.go  deploy_test.go  secrets.go  status.go  status_test.go  validate.go
api/api/test_objects/: status-prod-arryved-api.json
api/config/: config.go  mock-config.yml  mock-kubeconfig.yaml
api/config/product/: compile.go  compile_test.go  product.go  product_test.go  schema.go  schema_test.go
api/config/storage/: storage.go  storage_int_test.go
api/gce/: gce.go  gce_test.go  project.go
api/model/: status.go  version.go
api/queue/: jobs.go  queue.go  queue_test.go
api/rbac/: rbac.go  rbac_test.go
api/rbac/utility/: utility.go
api/runners/: gce-cache.go
api/secrets/: secrets.go  secrets_mocks.go  secrets_test.go
api/systemd/: app-control-api.service
cli/: .flake8  .gitignore  Makefile  Pipfile  README.md  pyproject.toml
cli/src/: setup.py
cli/src/appcontrol/: .cli.py.swp  auth.py  ca.py  cli.py  common.py  config.py  deploy.py  restart.py  secrets.py  status.py  version.py
cli/test/: config_test.py  status_test.py
daemon/: .gitignore  Makefile  README.md  app-controld.go  go.mod  go.sum  nfpm.yaml
daemon/api/: .handlers.go.swp  api.go  api_test.go  deploy.go  deploy_test.go  handlers.go  handlers_test.go  healthz.go  healthz_test.go  mock_apt  status.go  status_test.go
daemon/api/test_objects/: apt-installed-staging.txt
daemon/cli/: cli.go  cli_test.go  executor.go
daemon/clients/healthz/: healthz.go
daemon/config/: .config_test.go.swp  config.go  config_test.go  mock-config.yml
daemon/healthz/: healthz_test.go
daemon/model/: deploy.go  status.go  status_test.go
daemon/runners/: deploy.go  metadata.go  oor.go  status.go  status_test.go
daemon/systemd/: app-controld.service
daemon/var/: service.crt
daemon/varz/: .varz.go.swp  varz.go  varz_test.go
worker/: .gitignore  Makefile  README.md  app-control-worker.go  coverage.out  go.mod  go.sum  nfpm.yaml
worker/config/: config.go  dev-config.yml  mock-config.yml  mock-kubeconfig.yaml
worker/gce/: gce.go  gce_test.go
worker/gke/: generate.go  generate_test.go  kube.go  kube_test.go
worker/systemd/: app-control-worker.service
worker/templates/online/: backendconfig.yaml.tmpl  configmap.yaml.tmpl  deployment.yaml.tmpl  ingress.yaml.tmpl  secrets.yaml.tmpl  service.yaml.tmpl
worker/worker/: worker.go  worker_test.go
