[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "app-control"
version = "2.3.5"
description = "app-control CLI"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
dependencies = [ "Click", "ansitable>=0.9", "click-spinner>=0.1", "colorama>=0.4", "pyyaml>=6", "requests", "deepmerge", "google-cloud-storage", "arpy-sso>=0.1.0", "setuptools>=61.0",]
[[project.authors]]
name = "Bill West"
email = "wwest@arryved.com"

[[project.authors]]
name = "Jeremy Miller"
email = "jeremy@arryved.com"

[project.optional-dependencies]
tests = [ "build", "coverage>=6.5.0", "pytest>=7.2.0", "mypy>=0.991", "flake8>=6.0.0", "twine>=5.0.0", "types-requests>=2.28",]

[project.scripts]
app-control = "appcontrol.cli:cli"

[project.urls]
Homepage = "https://github.com/arryved/app-ctrl"
"Bug Tracker" = "https://arryved-rnd.atlassian.net/jira/software/c/projects/SRE/boards/10"
