[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "app-control"
version = "2.4.1"
description = "app-control CLI"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
dependencies = [
    "Click",
    "ansitable==0.9.10",
    "arpy-sso>=0.1.0",
    "click-spinner>=0.1",
    "colorama>=0.4",
    "deepmerge",
    "google-cloud-storage",
    "pwinput>=1.0.3",
    "pytz>=2024.1",
    "pyyaml>=6",
    "requests",
    "setuptools>=61.0",
]

[project.optional-dependencies]
tests = [ "build", "coverage>=6.5.0", "pytest>=7.2.0", "mypy>=0.991", "flake8>=6.0.0", "twine>=5.0.0", "types-requests>=2.28",]

[project.scripts]
app-control = "appcontrol.cli:cli"
